# GREP-LITE

./: CMakeLists.txt  README.md
src/: main.cpp  main.hpp  parse_parameters.cpp  parse_parameters.hpp
